--- a/sass/pages/_allArticles.scss
+++ b/sass/pages/_allArticles.scss
@@ -1,4 +1,13 @@
 .articles {
+  padding-bottom: 10rem;
+
+  &__title {
+    width: 80%;
+    margin-inline: auto;
+    padding-top: 5rem;
+    margin-bottom: 3rem;
+  }
+
   &__content {
     padding: 0 5%;
     display: grid;
